--- a/index.html
+++ b/index.html
@@ -3,54 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Color Model Converter (CMYK ↔ HLS ↔ XYZ)</title>
+    <title>Color Model Converter (CMYK ↔️ HLS ↔️ XYZ)</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <h1>Color Model Converter</h1>
 
-        <!-- CMYK Inputs -->
-        <div class="color-section">
-            <h2>CMYK</h2>
-            <label for="c">C:</label>
-            <input type="number" id="c" class="color-input" min="0" max="100" step="0.1">
+<!-- CMYK Inputs -->
+<div class="color-section">
+    <h2>CMYK</h2>
+    <label for="c">C:</label>
+    <input type="number" id="c" class="color-input" min="0" max="100" step="0.1">
+    <input type="range" id="c-range" min="0" max="100" step="0.1">
 
-            <label for="m">M:</label>
-            <input type="number" id="m" class="color-input" min="0" max="100" step="0.1">
+    <label for="m">M:</label>
+    <input type="number" id="m" class="color-input" min="0" max="100" step="0.1">
+    <input type="range" id="m-range" min="0" max="100" step="0.1">
 
-            <label for="y">Y:</label>
-            <input type="number" id="y" class="color-input" min="0" max="100" step="0.1">
+    <label for="y">Y:</label>
+    <input type="number" id="y" class="color-input" min="0" max="100" step="0.1">
+    <input type="range" id="y-range" min="0" max="100" step="0.1">
 
-            <label for="k">K:</label>
-            <input type="number" id="k" class="color-input" min="0" max="100" step="0.1">
-        </div>
+    <label for="k">K:</label>
+    <input type="number" id="k" class="color-input" min="0" max="100" step="0.1">
+    <input type="range" id="k-range" min="0" max="100" step="0.1">
+</div>
 
-        <!-- HLS Inputs -->
-        <div class="color-section">
-            <h2>HLS</h2>
-            <label for="h">H:</label>
-            <input type="number" id="h" class="color-input" min="0" max="360" step="1">
+<!-- HLS Inputs -->
+<div class="color-section">
+    <h2>HLS</h2>
+    <label for="h">H:</label>
+    <input type="number" id="h" class="color-input" min="0" max="360" step="1">
+    <input type="range" id="h-range" min="0" max="360" step="1">
 
-            <label for="l">L:</label>
-            <input type="number" id="l" class="color-input" min="0" max="100" step="0.1">
+    <label for="l">L:</label>
+    <input type="number" id="l" class="color-input" min="0" max="100" step="0.1">
+    <input type="range" id="l-range" min="0" max="100" step="0.1">
 
-            <label for="s">S:</label>
-            <input type="number" id="s" class="color-input" min="0" max="100" step="0.1">
-        </div>
+    <label for="s">S:</label>
+    <input type="number" id="s" class="color-input" min="0" max="100" step="0.1">
+    <input type="range" id="s-range" min="0" max="100" step="0.1">
+</div>
 
-        <!-- XYZ Inputs -->
-        <div class="color-section">
-            <h2>XYZ</h2>
-            <label for="x">X:</label>
-            <input type="number" id="x" class="color-input" min="0" max="100" step="0.01">
+<!-- XYZ Inputs -->
+<div class="color-section">
+    <h2>XYZ</h2>
+    <label for="x">X:</label>
+    <input type="number" id="x" class="color-input" min="0" max="100" step="0.01">
+    <input type="range" id="x-range" min="0" max="100" step="0.01">
 
-            <label for="y-xyz">Y:</label>
-            <input type="number" id="y-xyz" class="color-input" min="0" max="100" step="0.01">
+    <label for="y-xyz">Y:</label>
+    <input type="number" id="y-xyz" class="color-input" min="0" max="100" step="0.01">
+    <input type="range" id="y-range" min="0" max="100" step="0.01">
 
-            <label for="z">Z:</label>
-            <input type="number" id="z" class="color-input" min="0" max="100" step="0.01">
-        </div>
+    <label for="z">Z:</label>
+    <input type="number" id="z" class="color-input" min="0" max="100" step="0.01">
+    <input type="range" id="z-range" min="0" max="100" step="0.01">
+</div>
 
         <!-- Color Picker (Пипетка) -->
         <div class="color-picker">
